# ta-lib-reloaded

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  HISTORY.md  LICENSE.md  LICENSE_EXCEL.md  MigrationRoadMap.md  README-Original.md  README.md  ReadMe.md
.github/workflows/: cmake.yml
ta-lib/: CMakeLists.txt  LICENSE_EXCEL.TXT
ta-lib/c/: CMakeLists.txt
ta-lib/c/include/: ta_abstract.h
ta-lib/c/src/tools/gen_code/: CMakeLists.txt  gen_code.c
ta-lib/c/src/tools/ta_regtest/: CMakeLists.txt  ReadMe.txt  ta_regtest.c
ta-lib/c/src/tools/ta_regtest/ta_test_func/: test_imi.c
ta-lib/cmake/: OpenCVDetectApacheAnt.cmake
ta-lib/dotnet/: CMakeLists.txt
ta-lib/excel/src/xlw/: LICENSE_XLW.TXT
ta-lib/java/: CMakeLists.txt  build.xml.in
ta-lib/java/src/com/tictactec/ta/lib/: FuncUnstId.java
ta-lib/swig/: CMakeLists.txt
tadoc/: CMakeLists.txt  conf.py.in  incidators.rst  index.rst  indicator.rst  model_function.rst  model_indicator.rst
tadoc/indicators/: ADLCUM.rst  ADLRAT.rst  ADLZW.rst  ADP.rst  ADW.rst  ALIG.rst  ASI.rst  ATR-TS.rst  ATR.rst  BBANDS.rst  BOLLOSC.rst  BOP.rst  CCI.rst  CKIADL.rst  CKIOSC.rst  CKIVOL.rst  CMO.rst  CSI.rst  CTI.rst  DMI.rst  DPO.rst  EFT.rst  EIDX.rst  EMA.rst  EMM.rst  EOM.rst  EPMA.rst  FDI.rst  FI.rst  FR.rst  GMMA.rst  HHV.rst  HMA.rst  KBANDS.rst  KOT.rst  KOV.rst  KST.rst  LINEARREG.rst  LLV.rst  MA.rst  (+43 more)
tadoc/src/: conf.py.in  index.rst  indicator.rst
tadoc/src/indicators/: ADLRAT.rst  ADLZW.rst  ADW.rst  ASI.rst  BBANDS.rst  CCI.rst  CSI.rst  CTI.rst  DMI.rst  DPO.rst  EMM.rst  FI.rst  FR.rst  HHV.rst  KBANDS.rst  KOT.rst  KST.rst  LINEARREG.rst  LLV.rst  MACD.rst  PVI.rst  PVT.rst  R2.rst  RAVI.rst  ROC.rst  RSI.rst  SI.rst  SMA.rst  SRSI.rst  STPMT.rst  TP.rst  TPR.rst  TSLR.rst  TVI.rst  VHF.rst  VIDYA.rst  WCLOSE.rst  WILLR.rst  WUO.rst
tadoc/src/indicators/momentum/: ABI.rst  MACD.rst  RSI.rst
tadoc/src/indicators/oscillators/: BOLLOSC.rst  PO.rst  ROC.rst
tadoc/src/indicators/trends/: AMA.rst  EMA.rst  EPMA.rst  GMMA.rst  HMA.rst  MA.rst  PVT.rst  RMA.rst  SAR.rst  SMA.rst  TMA.rst  TRIX.rst  WMA.rst
tadoc/src/indicators/volatility/: ATR.rst  RVI.rst
tadoc/src/indicators/volume/: ADLCUM.rst  ADP.rst  CMF.rst  EOM.rst  MFI.rst  NVI.rst  OBV.rst  PVI.rst  RSI.rst  TVI.rst  VPT.rst
tadoc/src/site/: howTo_addTA_function.rst  index.rst
